--- a/res/layout/fragment_settings.xml
+++ b/res/layout/fragment_settings.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    >
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/bg_section_rounded"
+        android:orientation="vertical">
+	    
         <RelativeLayout
 	       android:layout_width="match_parent"
 	       android:layout_height="wrap_content"
-	       android:layout_margin="5dp"
-	       android:background="@drawable/bg_section_rounded" >
-        
+	       android:layout_margin="5dp" >
+
             <TextView 
                 android:id="@+id/AudioLabel"
                 android:layout_alignParentLeft="true"
@@ -18,7 +24,7 @@
 		        android:layout_height="wrap_content"
 		        android:text="@string/audio_off"
 		        android:layout_marginLeft="10dp"
-		        android:textSize="15sp"
+		        android:textSize="20sp"
 		        android:textStyle="bold" />
             
 	        <CheckBox
@@ -32,8 +38,7 @@
         <RelativeLayout
 	       android:layout_width="match_parent"
 	       android:layout_height="wrap_content"
-	       android:layout_margin="5dp"
-	       android:background="@drawable/bg_section_rounded" >
+	       android:layout_margin="5dp" >
         
             <TextView 
                 android:id="@+id/VibrationLabel"
@@ -43,7 +48,7 @@
 		        android:layout_height="wrap_content"
 		        android:text="@string/vibration_off"
 		        android:layout_marginLeft="10dp"
-		        android:textSize="15sp"
+		        android:textSize="20sp"
 		        android:textStyle="bold" />
         
 	        <CheckBox
@@ -53,5 +58,5 @@
 		        android:layout_height="wrap_content" />
 	        
 	    </RelativeLayout>
-
-</LinearLayout>
+	</LinearLayout>
+</FrameLayout>
