--- a/res/layout/fragment_settings.xml
+++ b/res/layout/fragment_settings.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="15dp"
         android:background="@drawable/bg_section_rounded"
         android:orientation="vertical">
 	    
@@ -58,5 +58,27 @@
 		        android:layout_height="wrap_content" />
 	        
 	    </RelativeLayout>
+	    
+        <RelativeLayout
+	       android:layout_width="match_parent"
+	       android:layout_height="wrap_content"
+	       android:layout_margin="5dp" >
+        
+            <Button 
+                android:id="@+id/ResetButton"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="@string/reset_game"
+	            android:textColor="#333"
+	            android:shadowColor="#FFF"
+	            android:shadowRadius="2"
+	            android:textStyle="bold"
+	            android:textSize="18sp"
+	            android:background="@drawable/grey_button_selector" />
+        	        
+	    </RelativeLayout>
+	    
 	</LinearLayout>
 </FrameLayout>
