Updated item_list_sections.xml to support locked sections. Added a lock resource.

--- a/res/layout/fragment_level.xml
+++ b/res/layout/fragment_level.xml
@@ -38,6 +38,7 @@
                 android:layout_centerVertical="true"
                 android:textColor="#666"
                 android:textSize="32sp"
+                android:textScaleX="1.05"
                 android:textStyle="bold" />
         </RelativeLayout>
 
