actionbar center label in centered. End of a level (success/failure). Right of actionbar labels. Dynamic content.

--- a/res/layout/ab_view_level.xml
+++ b/res/layout/ab_view_level.xml
@@ -4,8 +4,7 @@
         android:id="@+id/ab_level_difficulty_layout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/ab_level_hints_layout"
+		android:layout_centerInParent="true"
         android:gravity="center" >
 
         <include
@@ -34,7 +33,6 @@
             android:shadowDx="1"
             android:shadowDy="1"
             android:shadowRadius="2"
-            android:text="48"
             android:includeFontPadding="false"
             android:textColor="#636363"
             android:textSize="24sp"
