--- a/res/layout/ab_view_sections.xml
+++ b/res/layout/ab_view_sections.xml
@@ -4,9 +4,7 @@
         android:id="@+id/ab_section_middle_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/ab_section_right_text"
+        android:layout_centerInParent="true"
         android:gravity="center"
         android:shadowColor="#FFF"
         android:shadowDx="1"
