--- a/res/layout/dialog_level_success.xml
+++ b/res/layout/dialog_level_success.xml
@@ -4,89 +4,105 @@
     android:layout_gravity="center"
     android:background="@drawable/dialog_border_bright" >
 
-    <TextView
-        android:id="@+id/level_success_title"
+    <com.quizz.places.widgets.RotatingSunEffect
+        android:id="@+id/level_success_background_effect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:shadowColor="#888"
-        android:shadowDx="-1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
-        android:text="@string/level_success_title"
-        android:textColor="#00B219"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:layout_alignBottom="@+id/level_success_content"
+        android:layout_alignLeft="@+id/level_success_content"
+        android:layout_alignRight="@+id/level_success_content"
+        android:layout_alignTop="@+id/level_success_content" />
 
-    <View
-        android:id="@+id/level_success_title_divider"
+    <RelativeLayout
+        android:id="@+id/level_success_content"
         android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:layout_below="@+id/level_success_title"
-        android:layout_alignLeft="@+id/level_success_buttons_layout"
-        android:layout_alignRight="@+id/level_success_buttons_layout"
-        android:layout_margin="10dp"
-        android:background="#ccc" />
-
-    <TextView
-        android:id="@+id/level_success_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/level_success_title_divider"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="+ 2 hints"
-        android:textColor="#888"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
-    <View
-        android:id="@+id/level_success_buttons_divider"
-        android:layout_width="wrap_content"
-        android:layout_alignLeft="@+id/level_success_buttons_layout"
-        android:layout_alignRight="@+id/level_success_buttons_layout"
-        android:layout_height="1dp"
-        android:layout_below="@+id/level_success_message"
-        android:layout_marginTop="20dp"
-        android:background="#bbb" />
-
-    <LinearLayout
-        android:id="@+id/level_success_buttons_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/level_success_buttons_divider"
-        android:orientation="horizontal"
-        android:gravity="center" >
+        android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/level_success_close_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:gravity="center"
-            android:text="Close"
-            android:textColor="#444"
-            android:textSize="18sp" />
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="#bbb" />
-
-        <TextView
-            android:id="@+id/level_success_next_button"
+            android:id="@+id/level_success_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:drawablePadding="8dp"
-            android:drawableRight="@drawable/ic_next"
+            android:layout_centerHorizontal="true"
+            android:shadowColor="#888"
+            android:shadowDx="-1"
+            android:shadowDy="1"
+            android:shadowRadius="1"
+            android:layout_marginTop="5dp"
+            android:text="@string/level_success_title"
+            android:textColor="#00B219"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <View
+            android:id="@+id/level_success_title_divider"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:layout_alignLeft="@+id/level_success_buttons_layout"
+            android:layout_alignRight="@+id/level_success_buttons_layout"
+            android:layout_below="@+id/level_success_title"
+            android:layout_margin="10dp"
+            android:background="#ccc" />
+
+        <TextView
+            android:id="@+id/level_success_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/level_success_title_divider"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
             android:gravity="center"
-            android:text="Next"
-            android:textColor="#444"
-            android:textSize="18sp" />
-    </LinearLayout>
+            android:text="+ 2 hints"
+            android:textColor="#888"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <View
+            android:id="@+id/level_success_buttons_divider"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:layout_alignLeft="@+id/level_success_buttons_layout"
+            android:layout_alignRight="@+id/level_success_buttons_layout"
+            android:layout_below="@+id/level_success_message"
+            android:layout_marginTop="20dp"
+            android:background="#bbb" />
+
+        <LinearLayout
+            android:id="@+id/level_success_buttons_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/level_success_buttons_divider"
+            android:gravity="center"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/level_success_close_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:gravity="center"
+                android:text="Close"
+                android:textColor="#444"
+                android:textSize="18sp" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="#bbb" />
+
+            <TextView
+                android:id="@+id/level_success_next_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:drawablePadding="8dp"
+                android:drawableRight="@drawable/ic_next"
+                android:gravity="center"
+                android:text="Next"
+                android:textColor="#444"
+                android:textSize="18sp" />
+        </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
