--- a/res/layout/dialog_level_success.xml
+++ b/res/layout/dialog_level_success.xml
@@ -40,68 +40,81 @@
             android:layout_alignLeft="@+id/level_success_buttons_layout"
             android:layout_alignRight="@+id/level_success_buttons_layout"
             android:layout_below="@+id/level_success_title"
-            android:layout_margin="10dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:background="#ccc" />
 
         <TextView
-            android:id="@+id/level_success_message"
+            android:id="@+id/level_success_response"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/level_success_title_divider"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:text="Le Colisée"
+            android:textColor="#888"
+            android:textSize="26sp"
+            android:includeFontPadding="false"
+            android:textStyle="bold" />
+         
+        <TextView
+            android:id="@+id/level_success_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/level_success_response"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="4dp"
             android:gravity="center"
             android:text="+ 2 hints"
-            android:textColor="#888"
-            android:textSize="24sp"
+            android:textColor="#aaa"
+            android:textSize="18sp"
             android:textStyle="bold" />
-
-        <View
-            android:id="@+id/level_success_buttons_divider"
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:layout_alignLeft="@+id/level_success_buttons_layout"
-            android:layout_alignRight="@+id/level_success_buttons_layout"
-            android:layout_below="@+id/level_success_message"
-            android:layout_marginTop="20dp"
-            android:background="#bbb" />
 
         <LinearLayout
             android:id="@+id/level_success_buttons_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/level_success_buttons_divider"
+            android:layout_below="@+id/level_success_message"
             android:gravity="center"
+            android:layout_marginTop="2dp"
             android:orientation="horizontal" >
 
-            <TextView
+            <Button
                 android:id="@+id/level_success_close_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
+                android:layout_margin="10dp"
+                android:paddingRight="15dp"
+                android:paddingLeft="15dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:gravity="center"
                 android:text="Close"
-                android:textColor="#444"
-                android:textSize="18sp" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#bbb" />
+                android:textColor="#888"
+                android:background="@drawable/button_close_level_success_dialog"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/level_success_next_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
+                android:layout_margin="10dp"
+                android:paddingRight="10dp"
+                android:paddingLeft="15dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                 android:drawablePadding="8dp"
                 android:drawableRight="@drawable/ic_next"
+                android:background="@drawable/button_close_level_success_dialog"
                 android:gravity="center"
                 android:text="Next"
-                android:textColor="#444"
-                android:textSize="18sp" />
+                android:textColor="#888"
+                android:textSize="16sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </RelativeLayout>
 
