WIP: Handling onNextLevel() method when clicking on Next button from LevelSuccessDialog.

--- a/res/layout/dialog_level_success.xml
+++ b/res/layout/dialog_level_success.xml
@@ -98,7 +98,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <TextView
+            <Button
                 android:id="@+id/level_success_next_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
