--- a/res/layout/fragment_menu.xml
+++ b/res/layout/fragment_menu.xml
@@ -31,6 +31,13 @@
     	android:scaleType="centerCrop"
     	android:visibility="gone" />
     
+    <ProgressBar 
+        android:id="@+id/dataLoadingProgress"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyleHorizontal" 
+        android:layout_centerInParent="true" />
+    
     <LinearLayout
         android:id="@+id/menuButtonsContainer"
     	android:layout_width="match_parent"
