--- a/res/layout/ab_view_sections.xml
+++ b/res/layout/ab_view_sections.xml
@@ -25,8 +25,8 @@
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="2"
-        android:textColor="#616161"
+        android:textColor="#636363"
         android:textSize="20sp"
-        android:textStyle="normal" />
+        android:textStyle="bold" />
 
 </merge>
