--- a/res/layout/fragment_settings.xml
+++ b/res/layout/fragment_settings.xml
@@ -35,6 +35,13 @@
 
         </RelativeLayout>
         
+        <View 
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="#88888888"/>
+        
         <RelativeLayout
 	       android:layout_width="match_parent"
 	       android:layout_height="wrap_content"
@@ -59,6 +66,13 @@
 	        
 	    </RelativeLayout>
 	    
+        <View 
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="#88888888"/>
+        
         <RelativeLayout
 	       android:layout_width="match_parent"
 	       android:layout_height="wrap_content"
