--- a/res/layout/dialog_level_success.xml
+++ b/res/layout/dialog_level_success.xml
@@ -83,6 +83,23 @@
             android:orientation="horizontal" >
 
             <Button
+                android:id="@+id/level_success_back_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:paddingRight="15dp"
+                android:paddingLeft="15dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:gravity="center"
+                android:text="Back"
+                android:textColor="#888"
+                android:background="@drawable/button_close_level_success_dialog"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:visibility="gone" />
+            
+            <Button
                 android:id="@+id/level_success_close_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
