--- a/res/layout/fragment_settings.xml
+++ b/res/layout/fragment_settings.xml
@@ -1,16 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
 
+	<TextView
+	    android:id="@+id/general_config_group_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Global setup"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="17dp"
+        android:layout_marginRight="15dp"
+        android:shadowColor="#888"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        android:textColor="#333"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        />
+        
     <LinearLayout
+        android:id="@+id/general_config_group_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
+        android:layout_below="@+id/general_config_group_label"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/bg_section_rounded"
         android:orientation="vertical">
-	    
+        
         <RelativeLayout
 	       android:layout_width="match_parent"
 	       android:layout_height="wrap_content"
@@ -27,11 +49,18 @@
 		        android:textSize="20sp"
 		        android:textStyle="bold" />
             
-	        <CheckBox
-		        android:id="@+id/AudioCheckbox"
-		        android:layout_alignParentRight="true"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content" />
+            <ToggleButton 
+                android:id="@+id/AudioOption"
+                style="@style/Widget.Button.Toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true" />
+            
+<!-- 	        <CheckBox -->
+<!-- 		        android:id="@+id/AudioCheckbox" -->
+<!-- 		        android:layout_alignParentRight="true" -->
+<!-- 		        android:layout_width="wrap_content" -->
+<!-- 		        android:layout_height="wrap_content" /> -->
 
         </RelativeLayout>
         
@@ -58,11 +87,18 @@
 		        android:textSize="20sp"
 		        android:textStyle="bold" />
         
-	        <CheckBox
-		        android:id="@+id/VibrationCheckbox"
-		        android:layout_alignParentRight="true"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content" />
+<!-- 	        <CheckBox -->
+<!-- 		        android:id="@+id/VibrationCheckbox" -->
+<!-- 		        android:layout_alignParentRight="true" -->
+<!-- 		        android:layout_width="wrap_content" -->
+<!-- 		        android:layout_height="wrap_content" /> -->
+
+            <ToggleButton 
+                android:id="@+id/VibrationOption"
+                style="@style/Widget.Button.Toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true" />
 	        
 	    </RelativeLayout>
 	    
@@ -72,27 +108,101 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:background="#88888888"/>
-        
-        <RelativeLayout
+
+       	<RelativeLayout
 	       android:layout_width="match_parent"
 	       android:layout_height="wrap_content"
 	       android:layout_margin="5dp" >
         
+            <TextView 
+                android:id="@+id/ExitPopupLabel"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="@string/vibration_off"
+		        android:layout_marginLeft="10dp"
+		        android:textSize="20sp"
+		        android:textStyle="bold" />
+        
+            <ToggleButton
+                android:id="@+id/ExitPopupOption"
+                style="@style/Widget.Button.Toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true" />
+	        
+	    </RelativeLayout>
+	    
+       	<View 
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="#88888888"/>
+        
+    </LinearLayout>
+        
+    <TextView
+	    android:id="@+id/game_data_group_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/general_config_group_container"
+        android:text="Game data"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="17dp"
+        android:layout_marginRight="15dp"
+        android:shadowColor="#888"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        android:textColor="#333"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        />
+        
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/game_data_group_label"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/bg_section_rounded"
+        android:orientation="vertical">
+       	
+       	<RelativeLayout
+	       android:layout_width="match_parent"
+	       android:layout_height="wrap_content"
+	       android:layout_margin="5dp" >
+        
+            <TextView 
+                android:id="@+id/ResetLabel"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="Reset game"
+		        android:layout_marginLeft="10dp"
+		        android:textSize="20sp"
+		        android:textStyle="bold" />
             <Button 
                 android:id="@+id/ResetButton"
                 android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		        android:text="@string/reset_game"
+		        android:text="Yes"
 	            android:textColor="#333"
 	            android:shadowColor="#FFF"
 	            android:shadowRadius="2"
 	            android:textStyle="bold"
-	            android:textSize="18sp"
-	            android:background="@drawable/grey_button_selector" />
+	            android:textSize="16sp"
+	            android:background="@drawable/setting_button_bg" />
         	        
 	    </RelativeLayout>
 	    
 	</LinearLayout>
-</FrameLayout>
+</RelativeLayout>
