--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -25,4 +25,11 @@
         <item name="android:windowExitAnimation">@android:anim/slide_out_right</item>
     </style>
     
+    <style name="Widget.Button.Toggle" parent="android:Widget">
+        <item name="android:background">@drawable/btn_toggle_bg</item>
+        <item name="android:textOn"></item>
+        <item name="android:textOff"></item>
+        <item name="android:disabledAlpha">?android:attr/disabledAlpha</item>
+    </style>
+    
 </resources>
